# pure-data

./: .gitmodules  CMakeLists.txt  appveyor.yml
ceammc/: CMakeLists.txt
ceammc/doc/: CMakeLists.txt  list_tutorial.md  list_tutorial_01.pd  list_tutorial_02.pd  list_tutorial_03.pd  list_tutorial_04.pd  list_tutorial_05.pd  list_tutorial_06.pd  list_tutorial_07.pd  list_tutorial_08.pd  list_tutorial_09.pd  list_tutorial_10.pd  make_obj.sh
ceammc/ext/src/lib/: ceammc_convert.cpp  ceammc_convert_pitch.cpp
ceammc/ext/tests/: tests.cmake
ceammc/extra/: CMakeLists.txt  extra_objects.txt
ceammc/extra/hoa/: CMakeLists.txt
cmake/: PdPlatform.cmake
mac/: cmake-build-mac.sh.in
src/: CMakeLists.txt
